bug fix(overflow-x of nav-right)

--- a/public/css/order.scss
+++ b/public/css/order.scss
@@ -143,7 +143,8 @@ body {
 	right: 0;
 	top: 0;
 	padding-top: 50px;
-	overflow: auto;
+	overflow-y: auto;
+	overflow-x: hidden;
 }
 
 #myOrder {
